# yolo-gradio

./: .gitignore  README.md  app.py  pyproject.toml  requirements-gpu.txt  requirements.txt  yolo.py
helpers/: device.py
